@@ -20,51 +20,55 @@ import java.util.Map;
 
 @Service
 public class ValidacionServiceImpl implements ValidacionService {
+
     @Autowired
     private HemofiliaReadService hemofiliaReadService;
+
     @Autowired
     private TblReadValidacionRepository tblReadValidacionRepository;
+
     @Autowired
     private Reflector reflector;
+
     @PersistenceContext
     private EntityManager entityManager;
+
     @Override
     public ResponseEntity<Message> resultValidacion(int idPaciente, int idEnfermedad) {
         try {
             Object objectPasciente;
-            Object claseValidaciones=null;
-            switch (idEnfermedad)
-            {
-                case 1:
-                    {
-                        objectPasciente= hemofiliaReadService.oneElement(idPaciente);
-                        break;
-                    }
+            Object claseValidaciones = null;
+            switch (idEnfermedad) {
+                case 1: {
+                    objectPasciente = hemofiliaReadService.oneElement(idPaciente);
+                    break;
+                }
                 default:
                     return ResponseEntity.badRequest().body(new Message("No se encontró la enfermedad"));
             }
 
-            if(objectPasciente.equals(null)){
+            if (objectPasciente.equals(null)) {
                 return ResponseEntity.badRequest().body(new Message("No se pudo encontrar al pasciente"));
-            }else {
+            } else {
                 ObjectMapper mapper = new ObjectMapper();
                 mapper.setDateFormat(new SimpleDateFormat("yyyy-MM-dd"));
-                String JSON_SOURCE= mapper.writeValueAsString(objectPasciente);
-                Map<String,Object> result = mapper.readValue(JSON_SOURCE, HashMap.class);
-                Map<String,String> parame = new HashMap<>();
+                String JSON_SOURCE = mapper.writeValueAsString(objectPasciente);
+                Map<?, ?> result = mapper.readValue(JSON_SOURCE, HashMap.class);
+                Map<String, String> parame = new HashMap<>();
                 try {
-                    List<TblReadValidacionModel> listValidacion=tblReadValidacionRepository.listValidaciones(idEnfermedad);
-                    for (int i = 0; i <listValidacion.size() ; i++) {
-                        //Sacar parametros
-                        String[] parametrosTbl=listValidacion.get(i).getParametros().split(",");
+                    List<TblReadValidacionModel> listValidacion = tblReadValidacionRepository
+                            .listValidaciones(idEnfermedad);
+                    for (int i = 0; i < listValidacion.size(); i++) {
+                        // Sacar parametros
+                        String[] parametrosTbl = listValidacion.get(i).getParametros().split(",");
                         for (int j = 0; j < parametrosTbl.length; j++) {
-                            parame.put(parametrosTbl[j],result.get(parametrosTbl[j]).toString());
+                            parame.put(parametrosTbl[j], result.get(parametrosTbl[j]).toString());
                         }
-                        //Sacar clase validaciones generico
+                        // Sacar clase validaciones generico
                         ClassLoader classLoader = ClassLoader.getSystemClassLoader();
                         try {
                             Class<?> clazz = classLoader.loadClass(listValidacion.get(i).getClaseValidacion());
-                            claseValidaciones =  clazz.newInstance();
+                            claseValidaciones = clazz.getDeclaredConstructor().newInstance();
                         } catch (ClassNotFoundException e) {
                             e.printStackTrace();
                         } catch (InstantiationException e) {
@@ -73,38 +77,44 @@ public class ValidacionServiceImpl implements ValidacionService {
                             e.printStackTrace();
                         }
                         /*
-                        //Sacar el objeto para validar
-                        ClassLoader classLoader = ClassLoader.getSystemClassLoader();
+                         * //Sacar el objeto para validar
+                         * ClassLoader classLoader = ClassLoader.getSystemClassLoader();
+                         * try {
+                         * Class<?> clazz =
+                         * classLoader.loadClass(listValidacion.get(i).getBuscarElemento());
+                         * Object objetoClaseValidacion = clazz.newInstance();
+                         * objetoClaseValidacion=reflector.buscarGenerico(objetoClaseValidacion,
+                         * "oneElement",idPaciente);
+                         * System.out.println(objetoClaseValidacion.toString()+"hola");
+                         * } catch (ClassNotFoundException e) {
+                         * e.printStackTrace();
+                         * } catch (InstantiationException e) {
+                         * e.printStackTrace();
+                         * } catch (IllegalAccessException e) {
+                         * e.printStackTrace();
+                         * }
+                         */
                         try {
-                            Class<?> clazz = classLoader.loadClass(listValidacion.get(i).getBuscarElemento());
-                            Object objetoClaseValidacion =  clazz.newInstance();
-                            objetoClaseValidacion=reflector.buscarGenerico(objetoClaseValidacion,"oneElement",idPaciente);
-                            System.out.println(objetoClaseValidacion.toString()+"hola");
-                        } catch (ClassNotFoundException e) {
-                            e.printStackTrace();
-                        } catch (InstantiationException e) {
-                            e.printStackTrace();
-                        } catch (IllegalAccessException e) {
-                            e.printStackTrace();
-                        }*/
-                        try{
-                            List<String> resultadoValidacion=reflector.validacionGenerico(claseValidaciones,listValidacion.get(i).getNombreValidacion(),parame);
-                            if (resultadoValidacion.get(0).equals("false"))
-                            {
-                                return ResponseEntity.badRequest().body(new Message(resultadoValidacion.get(1)));//matriz de errores
+                            List<String> resultadoValidacion = reflector.validacionGenerico(claseValidaciones,
+                                    listValidacion.get(i).getNombreValidacion(), parame);
+                            if (resultadoValidacion.get(0).equals("false")) {
+                                /* Matriz de errores */
+                                return ResponseEntity.badRequest().body(new Message(resultadoValidacion.get(1)));
                             }
-                            }catch (Exception e){
-                            return ResponseEntity.badRequest().body(new Message("No se pudo hacer la validacion "+e.getMessage()));
+                        } catch (Exception e) {
+                            return ResponseEntity.badRequest()
+                                    .body(new Message("No se pudo hacer la validacion " + e.getMessage()));
                         }
                     }
-                    return  ResponseEntity.ok().body(new Message("Validacion Exitosa"));
-                }catch (Exception e){
-                    return ResponseEntity.badRequest().body(new Message("No se pudo encontrar la validacion"+e.getMessage()));
+                    return ResponseEntity.ok().body(new Message("Validacion Exitosa"));
+                } catch (Exception e) {
+                    return ResponseEntity.badRequest()
+                            .body(new Message("No se pudo encontrar la validacion" + e.getMessage()));
                 }
 
             }
-        }catch (Exception e){
-            return ResponseEntity.badRequest().body(new Message("No se pudo terminar la validacion"+e.getMessage()));
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(new Message("No se pudo terminar la validacion" + e.getMessage()));
         }
 
     }
